# JLEON3.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.quarto/idx/: index.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX
_site/: about.html  index.html  search.json
_site/projects/: project1.html
_site/site_libs/bootstrap/: bootstrap-a4e001b6b7c8ced660ccc99dbbda6e4b.min.css
projects/: project1.html  project1.qmd
